metadata/force-app/main/default/objects/CustomName_LQMlQ__c/CustomName_LQMlQ__c.object-meta.xml
<CustomObject>
    <description>Description_EcDXQ</description>
    <label>CustomLabel_msEiK</label>
    <nameField>
        <label>CustomLabel_msEiK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_msEiKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>