metadata/force-app/main/default/objects/CustomName_LQMlQ__c/fields/CustomField_OKczh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_OKczh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVljkO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>